# This is the CMake file for the src subdirectory of the
# NCEPLIBS_grib-util project.
#
# Kyle Gerheiser, Mark Potts

add_subdirectory(cnvgrib.fd)
add_subdirectory(copygb.fd)
add_subdirectory(copygb2.fd)
add_subdirectory(grb2index.fd)
add_subdirectory(degrib2.fd)
add_subdirectory(grib2grib.fd)
add_subdirectory(grbindex.fd)
add_subdirectory(tocgrib.fd)
add_subdirectory(tocgrib2.fd)
add_subdirectory(tocgrib2super.fd)
add_subdirectory(wgrib.cd)
