# This is the CMake file for the src subdirectory of the
# NCEPLIBS_grib-util project.
#
# Kyle Gerheiser, Mark Potts

add_subdirectory(cnvgrib)
add_subdirectory(copygb)
add_subdirectory(copygb2)
add_subdirectory(grb2index)
add_subdirectory(degrib2)
add_subdirectory(grib2grib)
add_subdirectory(grbindex)
add_subdirectory(tocgrib)
add_subdirectory(tocgrib2)
add_subdirectory(tocgrib2super)
add_subdirectory(wgrib)
